--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MobileSystemeUndCloudTeamJapan</string>
+    <string name="light_sensor_label">Licht Sensor meldet:</string>
 </resources>
